# purrdf

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  Makefile  PLAN.md  PROVENANCE.md  README.md  SECURITY.md  cliff.toml  clippy.toml  rust-toolchain.toml
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
bindings/python-rdflib-shadow/: README.md  pyproject.toml
bindings/python-rdflib-shadow/rdflib/: __init__.py
bindings/python/benchmarks/: bench_compat.py
bindings/python/examples/: projection_roundtrip.py  projection_stream.py
bindings/python/src/: lib.rs  py_gts.rs  py_gts_dataset.rs  py_gts_view.rs  py_jsonld.rs  py_projection.rs  py_shex.rs  py_slice.rs  py_sssom.rs  py_store.rs  rdf.rs  shacl.rs  slice.rs
bindings/python/tests/: README.md  _shadow_test_utils.py  conftest.py  test_acceptance_matrix.py  test_collection.py  test_compat_parity.py  test_dataset.py  test_entail.py  test_graph.py  test_graph_facade.py  test_jsonld_baseline.py  test_jsonld_configured.py  test_namespaces.py  test_paths.py  test_plugin_discovery.py  test_projection.py  test_query.py  test_rdflib_shadow.py  test_rdflib_suite.py  test_rdflib_version.py  test_resource.py  test_sarif.py  test_sparql_prefixes.py  test_sparql_results.py  test_sparqlprocessor.py  test_term_model.py  test_top_level_exports.py  xfail_ledger.toml
crates/cli/: Cargo.toml  README.md
crates/cli/examples/: dataset-descriptions.sh  projection-roundtrip.sh
crates/cli/src/: cli.rs  convert.rs  error.rs  format.rs  ledger.rs  main.rs  projection.rs  query.rs  reason.rs  sink.rs  source.rs
crates/cli/tests/: convert_cli.rs  help_cli.rs  loss_ledger_cli.rs  projection_cli.rs  query_cli.rs  reason_cli.rs  smoke_cli.rs
crates/columnar/: Cargo.toml  README.md
crates/columnar/benches/: codec.rs
crates/columnar/examples/: write_oracle_fixture.rs
crates/columnar/src/: compact.rs  error.rs  files.rs  lib.rs  parquet.rs  reader.rs  schema.rs  writer.rs
crates/entail/: Cargo.toml  README.md
crates/entail/benches/: chase.rs
crates/entail/src/: interner.rs  lib.rs  rdfs.rs  rif_xml.rs  vocab.rs
crates/gts/: Cargo.toml  README.md
crates/gts/benches/: authoring.rs
crates/gts/examples/: agent_memory.rs  streaming_sink_bench.rs
crates/gts/fuzz/: .gitignore  Cargo.toml
crates/gts/src/: codec.rs  compact.rs  cose.rs  dict.rs  event_stream.rs  files.rs  from_tar.rs  lib.rs  mmr.rs  model.rs  nested.rs  openpgp.rs  policy.rs  reader.rs  reader_layout.rs  reader_rows.rs  reader_union.rs  replication.rs  segment_decode.rs  stream.rs  tar.rs  ulid.rs  verify.rs  wire.rs  writer.rs
crates/gts/tests/: compaction_signatures.rs  dict_codec.rs  encode_never_panics.rs  event_bridge.rs  frozen_canonical_bytes.rs  replication_diff.rs  streaming_provenance.rs  transport.rs
crates/iri/: Cargo.toml  README.md
crates/iri/benches/: parse.rs
crates/iri/src/: curie.rs  error.rs  lib.rs  normalize.rs  parse.rs  pos.rs  resolve.rs
crates/iri/tests/: PROVENANCE.md  iri_suite.rs  proptest.rs  resolution.rs  w3c_iri.rs
crates/purrdf/: Cargo.toml  README.md
crates/purrdf/src/: lib.rs  profile.rs  reasoning.rs
crates/purrdf/tests/: projection_facade.rs  readme_quickstart.rs
crates/rdf/: Cargo.toml  README.md
crates/rdf-capi/: Cargo.toml  README.md  cbindgen.toml
crates/rdf-capi/examples/: projection_roundtrip.c
crates/rdf-capi/include/: purrdf.h
crates/rdf-capi/src/: buffer.rs  cursor.rs  error.rs  graph.rs  gts.rs  handles.rs  lib.rs  parse.rs  projection.rs  query.rs  rowcursor.rs  serialize.rs  shacl.rs  status.rs  term.rs  version.rs
crates/rdf-capi/tests/: abi.rs  c_smoke.rs  smoke.c
crates/rdf-core/: Cargo.toml  README.md
crates/rdf-core/benches/: intern_content_id.rs  ir_layout.rs  mutable.rs  pack_bits.rs  pack_index_compare.rs  pack_query.rs  purremb.rs  purremb_alloc.rs  sssom.rs
crates/rdf-core/src/: backend.rs  bundle.rs  collections.rs  content_id.rs  content_store.rs  dataset_view.rs  describe.rs  diagnostic.rs  fno.rs  hash.rs  lib.rs  lookaside.rs  loss.rs  model.rs  provenance.rs  small.rs  sssom.rs  store.rs  turtle.rs  turtle_render.rs
crates/rdf-core/tests/: ir_zero_alloc.rs  pack_certify.rs  pack_container.rs  pack_dataset_view.rs  pack_id_unification.rs  pack_index_compare.rs  pack_mmap.rs  pack_side.rs  pack_triples.rs  paged_backend.rs  paged_fallible.rs  purremb_adversarial.rs  purremb_corpus.rs  purremb_f64.rs  purremb_indexes.rs  purremb_mmap.rs  purremb_rdf12.rs  purremb_roundtrip.rs  purremb_source.rs
crates/rdf-events/: Cargo.toml  README.md
crates/rdf-events/src/: lib.rs
crates/rdf-wasm/: Cargo.toml  README.md
crates/rdf-wasm/benches/: query_engine_reuse.rs
crates/rdf-wasm/js/: .gitignore  README.md  index.d.ts  index.mjs  package-lock.json  package.json  tsconfig.types.json
crates/rdf-wasm/src/: codec.rs  convert.rs  dataset.rs  factory.rs  jsonld.rs  lib.rs  projection.rs  query.rs  shacl.rs  stream.rs  term.rs
crates/rdf/benches/: jsonld_alloc.rs  native_codecs.rs  projections.rs  viz_layout.rs  viz_projection.rs
crates/rdf/examples/: attached_ro_crate.rs  csvw_terms.rs  gen_loss_matrix.rs  okf_terms.rs  projection_archive.rs  research_object_roundtrip.rs  viz_samples.rs  write_csvw_oracle_fixture.rs  write_obographs_oracle_fixture.rs
crates/rdf/src/: capture_support.rs  dataset_io.rs  gts.rs  gts_certify.rs  gts_compose.rs  gts_core.rs  gts_import_graph.rs  gts_import_sink.rs  gts_resolve.rs  gts_verify.rs  gts_view.rs  gts_write.rs  lib.rs  native_quads.rs  statements.rs  turtle_normalize.rs  ustar.rs  viz.rs
crates/rdf/tests/: csvw_w3c.rs  (+22 more)
crates/shapes/: Cargo.toml  README.md
crates/shex/: Cargo.toml  README.md
crates/slice/: Cargo.toml  README.md
crates/sparql-algebra/: Cargo.toml  README.md
crates/sparql-conformance/: Cargo.toml  README.md
crates/sparql-eval/: Cargo.toml  README.md
crates/sparql-results/: Cargo.toml  README.md
crates/validate/: Cargo.toml  README.md
crates/xsd/: Cargo.toml  README.md
(+1186 files in other folders)
