# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
resolver = "2"
members = [
    "bindings/python",
    "crates/gts",
    "crates/iri",
    "crates/purrdf",
    "crates/rdf",
    "crates/rdf-capi",
    "crates/rdf-core",
    "crates/rdf-events",
    "crates/rdf-wasm",
    "crates/shapes",
    "crates/slice",
    "crates/sparql-algebra",
    "crates/sparql-conformance",
    "crates/sparql-eval",
    "crates/sparql-results",
    "crates/xsd",
]
exclude = [
    "crates/gts/fuzz",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Blackcat-Informatics/purrdf"
homepage = "https://blackcatinformatics.ca/projects/purrdf"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
