# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-python"
description = "Python bindings for PURRDF, packaged as the purrdf_native extension module"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "purrdf_native"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
test = false

[dependencies]
purrdf = { path = "../../crates/rdf", version = "0.1.0" }
purrdf-core = { path = "../../crates/rdf-core", version = "0.1.0" }
purrdf-gts = { path = "../../crates/gts", version = "0.1.0" }
purrdf-shapes = { path = "../../crates/shapes", version = "0.1.0" }
purrdf-slice = { path = "../../crates/slice", version = "0.1.0" }
purrdf-sparql-eval = { path = "../../crates/sparql-eval", version = "0.1.0" }
purrdf-xsd = { path = "../../crates/xsd", version = "0.1.0" }
pyo3 = { version = "0.29", features = ["abi3-py313", "extension-module"] }
