# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-python"
description = "Python bindings for PurRDF, packaged as the purrdf_native extension module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "purrdf_native"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
test = false

[dependencies]
purrdf = { workspace = true }
purrdf-core = { workspace = true }
purrdf-gts = { workspace = true }
purrdf-shapes = { workspace = true }
purrdf-slice = { workspace = true }
purrdf-sparql-eval = { workspace = true }
purrdf-xsd = { workspace = true }
pyo3 = { workspace = true }
