# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "purrdf"
version = "0.8.2"
description = "Python bindings for the PurRDF RDF 1.2 kernel, GTS carrier, SHACL, and slice tooling"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT OR Apache-2.0"
authors = [
  { name = "Blackcat Informatics Inc.", email = "paudley@blackcatinformatics.ca" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[project.optional-dependencies]
# Opt-in: installs the separate `purrdf-rdflib` distribution, whose top-level
# `rdflib` package shadows the real rdflib and re-exports purrdf's compat
# surface. `pip install purrdf[rdflib]` yields a literal `import rdflib` drop-in.
# It MUST NOT be installed alongside the genuine rdflib (import-name collision) —
# hence a separate distribution (bindings/python-rdflib-shadow), never bundled
# into the main purrdf wheel and deliberately absent from the [dev] oracle env.
rdflib = ["purrdf-rdflib"]

[project.urls]
Homepage = "https://blackcatinformatics.ca/purrdf/"
Repository = "https://github.com/Blackcat-Informatics/purrdf"

# Dev dependency group (PEP 735; consumed by `uv`, ignored by the maturin build
# backend). The `dev` group carries the REAL rdflib — the differential oracle for
# the compat shim and the target of the rdflib-suite gate — plus the downstream
# acceptance-matrix consumers and the build/test tooling. The top-level `rdflib`
# shadow package is deliberately kept OUT of this environment so the oracle is
# never shadowed (see tests/README.md).
[dependency-groups]
dev = [
  "pytest>=8,<10",
  "rdflib>=7.1,<8",
  "mypy>=1.10",
  "maturin>=1.7,<2",
  "pyshacl",
  "SPARQLWrapper",
  "sssom",
  "jsonschema>=4,<5",
  "linkml==1.11.1",
  "pydantic>=2,<3",
]

# uv-only: resolve the opt-in `rdflib` extra's `purrdf-rdflib` from the in-repo
# shadow distribution (published to PyPI at release time). `pip`/build backends
# ignore `[tool.uv.sources]`, so a real `pip install purrdf[rdflib]` still pulls
# the published wheel. Extras are opt-in, so this NEVER enters the default dev
# (oracle) sync — the genuine rdflib in `[dependency-groups].dev` stays unshadowed.
[tool.uv.sources]
purrdf-rdflib = { path = "../python-rdflib-shadow" }

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep xfail strict everywhere: a ledgered (expected-failing) test that starts
# passing (XPASS) fails the run, forcing the xfail ledger to only ever shrink —
# mirroring the Rust conformance harnesses' XPASS discipline (AGENTS.md §2).
xfail_strict = true

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "purrdf.purrdf_native"
python-source = "python/src"
bindings = "pyo3"
include = [{ path = "rust-toolchain.toml", format = "sdist" }]
exclude = ["**/__pycache__/*", "**/*.pyc"]
