# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-gts"
description = "PurRDF GTS container engine: CBOR-sequence append-only graph transport reader, writer, folder, and verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/purrdf-gts"
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["rdf", "cbor", "gts", "knowledge-graph", "linked-data"]
categories = ["encoding", "database"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
# emojihash + randomart visual fingerprints, published from
# Blackcat-Informatics/visual-hashing.
visual-hashing = { workspace = true }
blake3 = { workspace = true }
# Data-parallel BLAKE3 verification: per-frame content ids across a segment,
# whole segments across a file, and `Hasher::update_rayon` for large payloads.
# On targets without threads (wasm32) rayon degrades to inline-sequential
# execution, so results are identical everywhere.
rayon = { workspace = true }
ciborium = { workspace = true }
# Borrowed deterministic-CBOR views serialize recursively without cloning Value trees.
serde = { workspace = true }
flate2 = { workspace = true }
# pure-Rust zstd encoder/decoder — no C toolchain, wasm-friendly
structured-zstd = { workspace = true }
time = { workspace = true }
filetime = { workspace = true }
# pure-Rust Ed25519 (COSE_Sign1, §9.2) — deterministic per RFC 8032, wasm-friendly
ed25519-dalek = { workspace = true }
# pure-Rust SHA-1 — only for OpenPGP v4 key fingerprints (RFC 4880 §12.2), not
# used as a general-purpose hash; wasm-friendly. Workspace-unified on the
# digest-0.10 family (matching sha2/md-5); defaults re-enabled here (std).
sha1 = { workspace = true, default-features = true }
# pure-Rust AES-256-GCM (COSE_Encrypt0, §9.3). Callers provide the nonce/IV
# through the portable core API, so this crate does not need an OS RNG.
aes-gcm = { workspace = true }

[dev-dependencies]
# Authoring hot-path regression watch. Defaults off like sibling crates so the
# bench lane stays lightweight and report-only.
criterion = { workspace = true }

[[bench]]
# GTS writer/codec authoring hot paths: rsyncable zstd block compression and
# deterministic graph snapshot emission. Report-only; excluded from check.
name = "authoring"
harness = false
